syntax = "proto3";

option java_multiple_files = true;
option java_package = "iot.temperature.proto";

package iot.temperature;

// Events consumed from external services

message TemperatureRead {
    int32 temperature = 1;
}
